--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -7,8 +7,12 @@
 # 2. Set up secrets in your workspace: GKE_PROJECT with the name of the project, GKE_EMAIL with the service account email, GKE_KEY with the Base64 encoded JSON service account key (https://github.com/GoogleCloudPlatform/github-actions/tree/docs/service-account-key/setup-gcloud#inputs).
 #
 # 3. Change the values for the GKE_ZONE, GKE_CLUSTER, IMAGE, REGISTRY_HOSTNAME and DEPLOYMENT_NAME environment variables (below).
-name: Build to GKE
+name: Build, Deploy
 
+#on:
+#  push:
+#    branches:
+#      - main
 on:
   pull_request:
     branches:
@@ -19,23 +23,36 @@ env:
   GKE_PROJECT: ${{ vars.GKE_PROJECT }}
   GKE_EMAIL: ${{ vars.GKE_EMAIL }}
   GITHUB_SHA: ${{ github.sha }}
-  GKE_ZONE: eu-west4-b
-  IMAGE: anysolve-docs
+  GKE_ZONE: europe-west4-b
+  GKE_DEPLOY_REGION: europe-west4
+  IMAGE: anysolve-editor
   REGISTRY_HOSTNAME: eu.gcr.io
-
 jobs:
-  setup-build:
-    name: Setup, Build
+  setup-build-publish:
+    name: Setup, Build, Publish
     runs-on: ubuntu-latest
+    permissions:
+      contents: "read"
+      id-token: "write"
     steps:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.9"
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+
+      # Setup gcloud CLI
+      - uses: google-github-actions/setup-gcloud@v0
+        with:
+          version: "318.0.0"
+          service_account_email: ${{ vars.GKE_EMAIL }}
+          service_account_key: ${{ secrets.GKE_KEY }}
 
       # Build the Docker image
       - name: Build
         run: |
-          docker build .
+          docker build -v ./site:/work/site.
+
+      - name: "Use gcloud CLI"
+        run: "gsutil -m rsync -R -d site/ gs://docs.anysolve.ai"
