--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -49,10 +49,13 @@ jobs:
           service_account_email: ${{ vars.GKE_EMAIL }}
           service_account_key: ${{ secrets.GKE_KEY }}
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       # Build the Docker image
       - name: Build
         run: |
-          docker build -v ./site:/work/site.
+          docker build -o site .
 
       - name: "Use gcloud CLI"
         run: "gsutil -m rsync -R -d site/ gs://docs.anysolve.ai"
