--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -55,7 +55,7 @@ jobs:
       # Build the Docker image
       - name: Build
         run: |
-          docker build -o site .
+          DOCKER_BUILDKIT=1 docker build -o site .
 
       - name: Show files
         run: |
