--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,11 @@
-site_name: AnySolve.ai
+site_name: AnySolve
 theme:
   name: material
+nav:
+  - Home: "index.md"
+  - "User Guide":
+      - "Overview": "guide/overview.md"
+  - "Showcase":
+      - "Task: Write a Paper": "showcase/write-a-paper.md"
+  - "REST API": "rest/rest.md"
+  - Pricing: "pricing.md"
