add chart generator task

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,7 @@ nav:
       - "Overview": "guide/overview.md"
   - "Showcase":
       - "Overview": "showcase/overview.md"
+      - "Task: Chart Generator": "showcase/chart-generator/chart-generator.md"
       - "Task: Create a HTML document": "showcase/create-html-document/create-html-document.md"
       - "Task design - Run AIs anonymized": "showcase/anonymize-ai/anonymize-ai.md"
       - "Task: Write and further improve a newspaper article": "showcase/create-newspaper-article/create-newspaper-article.md"
