fix: rename tasks to tools

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,12 +17,12 @@ nav:
       - "Overview": "guide/overview.md"
   - "Showcase":
       - "Overview": "showcase/overview.md"
-      - "Task: Query Document Collection": "showcase/query-document-collection/query-knowledge-base.md"
-      - "Task: Chart Generator": "showcase/chart-generator/chart-generator.md"
-      - "Task: Create a HTML document": "showcase/create-html-document/create-html-document.md"
-      - "Task design - Run AIs anonymized": "showcase/anonymize-ai/anonymize-ai.md"
-      - "Task: Write and further improve a newspaper article": "showcase/create-newspaper-article/create-newspaper-article.md"
-      - "Task: Write a Paper": "showcase/write-a-paper/write-a-paper.md"
+      - "Tool: Query Document Collection": "showcase/query-document-collection/query-knowledge-base.md"
+      - "Tool: Chart Generator": "showcase/chart-generator/chart-generator.md"
+      - "Tool: Create a HTML document": "showcase/create-html-document/create-html-document.md"
+      - "Tool design - Run AIs anonymized": "showcase/anonymize-ai/anonymize-ai.md"
+      - "Tool: Write and further improve a newspaper article": "showcase/create-newspaper-article/create-newspaper-article.md"
+      - "Tool: Write a Paper": "showcase/write-a-paper/write-a-paper.md"
       - "Create your own AI tool": "showcase/create-your-own-ai-tools/create-your-own-ai-tools.md"
   - "REST API": "rest/ai-api.md"
   - Community: "community.md"
